--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
-*{
-    background-color: red;
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
+/* global rules */
+body{
+    font-family: "Inter",sans-serif;
+}
+
+h1{
+    font-family: "Macondo",serif;
 }
