--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
 /* global rules */
+/* variables */
+:root{
+    --primary-font: "Inter",sans-serif;
+    --secondary-font: "Macondo", cursive;
+    --primary-color: #3a2620; /*dark brown*/
+    --secondary-color: #aa9581; /*cream*/
+    --highlight: #416a8e; /*blue*/
+    --light-highlight: #7a9fc2;  /*light blue*/
+}
 body{
-    font-family: "Inter",sans-serif;
+    font-family: var(--primary-font);
 }
 
-h1{
-    font-family: "Macondo",serif;
+h1,
+h2,
+h3{
+    font-family: var(--secondary-font);
+    color: var(--primary-color);
+}
+
+.sub-heading-color{
+    color: var(--highlight);
 }
