--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,12 @@ h3{
 }
 
 /* grid visualisations for testing */   
-.container,
+/* .container,
 .row {
     border:2px solid black;
 }
 .col-12{
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
+ 
