--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,13 @@ h2{
 #services .card{
     margin-bottom: 1.5rem;
 }
+/* Game library cards */
+
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
 
 /* media queries */
 /* medium devices (tablets) */
@@ -70,6 +77,7 @@ h2{
     #services .card-body{
         min-height: 191px;
     }
+
 }
 /* large devices (desktop) */
 @media screen and (min-width:992px) {
