add custom button style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,29 @@ h2{
     margin-bottom: 2rem;
 }
 
+/* buttons */
+.custom-button-filled{
+    border: 2px solid var(--highlight-color);
+    background-color: var(--highlight-color);
+    color: white;
+}
+.custom-button-filled:hover{
+    border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.custom-button-outline{
+    padding: 7px 25px;
+    border: 2px solid var(--highlight-color);
+    color: var(--highlight-color);
+    background-color: white;
+}
+.custom-button-outline:hover{
+    background-color: var(--highlight-color);
+    color:white;
+}
+
 /* navbar */
 #navbar{
     background-color: var(--primary-color);
