--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
 /* global rules */
 /* variables */
@@ -125,6 +126,8 @@ h2{
 #contact .social-links i{
     color: var(--highlight-color-light);
     font-size: 1.9rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
     transition: color 0.3s ease-in-out;
 }
 #contact .social-links i:hover{
@@ -173,13 +176,3 @@ h2{
         min-height: 195px;
     }
 }
-
-/* grid visualisations for testing */   
-/* .container,
-.row {
-    border:2px solid black;
-}
-.col-12{
-    border: 2px solid white;
-    background-color: lightgray;
-} */
